2002-11-19  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-vfs-util.c (gnome_gdk_pixbuf_new_from_uri):
	Always close loader when done. Correctly handle EOF.

2002-11-10  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added da to the list in ALL_LINGUAS. Too bad I
	first discovered this now.

2002-11-10  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* doc/reference/Makefile.am:
	Include stock icon images.

	* doc/reference/libgnomeui-docs.sgml:
	Put id attributes on all the sections.

	* doc/reference/tmpl/gnome-dialog.sgml,
	* doc/reference/tmpl/gnome-popup-menu.sgml,
	* doc/reference/tmpl/gnome-stock-icons.sgml,
	* libgnomeui/gnome-app.c:
	Documentation updates.

2002-11-09  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* doc/reference/Makefile.am:
	Don't scan libgnomeui-access.h; it's only for internal use.

	* doc/reference/tmpl/libgnomeui-access.sgml: Removed.

	* doc/reference/libgnomeui-docs.sgml,
	* doc/reference/libgnomeui-sections.txt:
	Reordered some sections.

	* doc/reference/tmpl/gnome-dialog.sgml,
	* doc/reference/tmpl/gnome-messagebox.sgml,
	* doc/reference/tmpl/gnome-propertybox.sgml,
	* doc/reference/tmpl/gnome-uidefs.sgml,
	* libgnomeui/gnome-dialog.c,
	* libgnomeui/gnome-dialog.h,
	* libgnomeui/gnome-messagebox.h,
	* libgnomeui/gnome-propertybox.c,
	* libgnomeui/gnome-propertybox.h:
	Documentation updates.

2002-11-08  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* libgnomeui/gnome-about.c: Removed mnemonics for "Written by",
	"Documented by" and "Translated by" notebook tabs which show up
	in the about dialog. Fixes bug# 96699.

2002-11-08  Malcolm Tredinnick <malcolm@commsecure.com.au>

	A small pile of fixes to make the API docs build without
	warnings and to include all of the new thumbnail and theme
	stuff.

	* doc/reference/tmpl/gnome-icon-lookup.sgml,
	* doc/reference/tmpl/gnome-icon-theme.sgml,
	* doc/reference/tmpl/gnome-theme-parse.sgml,
	* doc/reference/tmpl/gnome-thumbnail.sgml:
	New files.
