@@ -1,3 +1,9 @@
+2002-11-22  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
+
+	* libgnomeui/gnome-font-picker.c:
+	(gnome_font_picker_label_use_font_in_label): Modify only the font style
+	without changing other style properties. Fixes Bug#93214.
+
 2002-11-19  Alexander Larsson  <alexl@redhat.com>
 
 	* libgnomeui/gnome-vfs-util.c (gnome_gdk_pixbuf_new_from_uri):
